# lareventdisplay

./: CMakeLists.txt  CMakePresets.json  README.md
EventDisplay/: .nfs00000000b511d1c7000019ef  AnalysisBaseDrawer.cxx  AnalysisDrawingOptions.h  AnalysisDrawingOptions_service.cc  CMakeLists.txt  CalorPad.cxx  CalorView.cxx  CalorView.h  ColorDrawingOptions_service.cc  Display3DPad.cxx  Display3DView.h  DrawingPad.cxx  EVD_module.cc  EvdLayoutOptions.h  EvdLayoutOptions_service.cc  GNUmakefile  GeometryDrawer.h  GraphClusterAlg.cxx  GraphClusterAlg.h  GraphCluster_module.cc  HitSelector.cxx  HitSelector.h  InfoTransfer.h  InfoTransfer_service.cc  LinkDef.h  Ortho3DPad.cxx  Ortho3DPad.h  Ortho3DView.cxx  Ortho3DView.h  OrthoProj.h  RawDataDrawer.cxx  RawDataDrawer.h  RawDrawingOptions.h  RawDrawingOptions_service.cc  RecoBaseDrawer.cxx  RecoBaseDrawer.h  RecoDrawingOptions.h  RecoDrawingOptions_service.cc  SimulationDrawer.cxx  SimulationDrawer.h  (+30 more)
lareventdisplay/: CMakeLists.txt
lareventdisplay/EventDisplay/: AnalysisBaseDrawer.cxx  AnalysisBaseDrawer.h  AnalysisDrawingOptions.cc  AnalysisDrawingOptions.h  AnalysisDrawingOptions_service.cc  CMakeLists.txt  CalorPad.cxx  CalorPad.h  CalorView.cxx  CalorView.h  ChangeTrackers.h  ColorDrawingOptions.cc  ColorDrawingOptions.h  ColorDrawingOptions_service.cc  Display3DPad.cxx  Display3DPad.h  Display3DView.cxx  Display3DView.h  DrawingPad.cxx  DrawingPad.h  EVD_module.cc  EvdLayoutOptions.cc  EvdLayoutOptions.h  EvdLayoutOptions_service.cc  GeometryDrawer.cxx  GeometryDrawer.h  GraphClusterAlg.cxx  GraphClusterAlg.h  GraphCluster_module.cc  HeaderDrawer.cxx  HeaderDrawer.h  HeaderPad.cxx  HeaderPad.h  HitSelector.cxx  HitSelector.h  InfoTransfer.cc  InfoTransfer.h  InfoTransfer_service.cc  LinkDef.h  MCBriefPad.cxx  (+45 more)
lareventdisplay/EventDisplay/3DDrawers/: CMakeLists.txt  Edge3DDrawer_tool.cc  I3DDrawer.h  ISpacePoints3D.h  OpFlash3DDrawer_tool.cc  OpHit3DDrawer_tool.cc  PCA3DDrawer_tool.cc  PFParticle3DDrawer_tool.cc  Reco3DDrawers.fcl  SpacePoint3DDrawerAsymmetry_tool.cc  SpacePoint3DDrawerChiSquare_tool.cc  SpacePoint3DDrawerHitCharge_tool.cc  SpacePoint3DDrawerStandard_tool.cc  SpacePoint3DDrawer_tool.cc
lareventdisplay/EventDisplay/ExptDrawers/: CMakeLists.txt  ICARUSDrawer_tool.cc  IExperimentDrawer.h  MicroBooNEDrawer_tool.cc  ProtoDUNEDrawer_tool.cc  StandardDrawer_tool.cc  experiment3ddrawers.fcl
lareventdisplay/EventDisplay/SimDrawers/: CMakeLists.txt  DrawLArVoxel3D_tool.cc  DrawSimEnergyDeposit3D_tool.cc  DrawSimPhoton3D_tool.cc  ISim3DDrawer.h  SimDrawers.fcl
lareventdisplay/EventDisplay/wfHitDrawers/: CMakeLists.txt  DrawGausHits_tool.cc  DrawOpRawHist_tool.cc  DrawRawHist_tool.cc  DrawSkewHits_tool.cc  DrawWireData_tool.cc  DrawWireHist_tool.cc  IWFHitDrawer.h  IWFWireDrawer.h  IWaveformDrawer.h  wfHitDrawers.fcl
lareventdisplay/Landed/: CMakeLists.txt  LandedSocket.h  LandedSocket_service.cc  Landed_module.cc  landed.fcl
test/: CMakeLists.txt
ups/: product_deps  setup_for_development
