# ======================================================================
#  lareventdisplay main build file
#
#  cd .../path/to/build/directory
#  source .../path/to/lareventdisplay/ups/setup_for_development <-d|-p>
#  buildtool [-I /install/path] -bt[i] -jN
# ======================================================================

cmake_minimum_required(VERSION 3.20 FATAL_ERROR)

find_package(cetmodules REQUIRED)
project(lareventdisplay VERSION 09.10.14 LANGUAGES CXX)

include(CetCMakeEnv)
cet_cmake_env()

cet_set_compiler_flags(DIAGS CAUTIOUS
  WERROR
  NO_UNDEFINED
  EXTRA_FLAGS -pedantic
)

cet_report_compiler_flags(REPORT_THRESHOLD VERBOSE)

find_package(larsim REQUIRED EXPORT)
find_package(larevt REQUIRED EXPORT)
find_package(lardata REQUIRED EXPORT)
find_package(larcore REQUIRED EXPORT)
find_package(lardataalg REQUIRED EXPORT)
find_package(lardataobj REQUIRED EXPORT)
find_package(larcorealg REQUIRED EXPORT)
find_package(larcoreobj REQUIRED EXPORT)

find_package(art_root_io REQUIRED EXPORT)
find_package(canvas_root_io REQUIRED EXPORT)
find_package(art REQUIRED EXPORT)
find_package(canvas REQUIRED EXPORT)
find_package(messagefacility REQUIRED EXPORT)
find_package(fhiclcpp REQUIRED EXPORT)
find_package(cetlib REQUIRED EXPORT)
find_package(cetlib_except REQUIRED EXPORT)

find_package(nuevdb REQUIRED EXPORT)
find_package(nusimdata REQUIRED EXPORT)

find_package(Eigen3 3.3 REQUIRED)
find_package(ROOT COMPONENTS Core EG Geom Gpad Gui Hist MathCore REQUIRED EXPORT)
find_package(ZLIB REQUIRED EXPORT)

# macros for dictionary and simple_plugin
include(CetMake)
include(BuildPlugins)

cet_cmake_module_directories(Modules BINARY)

# source
add_subdirectory(lareventdisplay)

# packaging utility
cet_cmake_config()
